# SentientOS

./: .env  .env.example  .env.sync.autofill.py  .gitattributes  .gitignore  .pre-commit-config.yaml  ADVERSARIAL_GRADIENT_INJECTION_AUDIT.md  ADVERSARIAL_READING_THREAT_MODEL.md  AFFECTIVE_CONTEXT_CONTRACT.md  AGENTS.md  AUDIT_LOG_FIXES.md  AUDIT_SENTIENTOS.md  All Code  BANNER_ASCII.txt  BETA_NOTES.md  BLESSED_FEDERATION_LAUNCH.md  CAPABILITY_GROWTH_LEDGER.md  CAPABILITY_LEDGER_CONSUMPTION_AUDIT.md  CHANGELOG.md  CODEX_SANDBOX_CONFORMANCE_REPORT.md  CODEX_SESSION.md  CONTRIBUTING.md  CONTRIBUTORS.md  CYCLE_BOUNDARY_CONTRACT.md  Cargo.toml  DEGRADATION_CONTRACT.md  DOCTRINE.md  Dockerfile  Dockerfile.cuda  EXTENSIONS.md  EXTERNAL_AUDITOR_WALKTHROUGH.md  FIRST_RUN.md  HEADER_ISSUES.md  INSTALL.md  INTERPRETATION_DRIFT_CHECKS.md  INTERPRETATION_DRIFT_RESPONSE.md  INTERPRETATION_DRIFT_SIGNALS.md  INVARIANT_CROSS_REFERENCE_INDEX.md  INVARIANT_ENFORCEMENT.md  KNOWN_FAILING.txt  (+755 more)
.codex_task/: bootstrap.plan.json  bootstrap.prompt.txt  bootstrap.scaffold.json  bootstrap.summary.json
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
Liturgy/: README.md
SentientOSsecondary/llama.cpp/examples/server/: CMakeLists.txt  embed_asset.cmake  generate_static_asset_manifest.cmake  server.cpp
SentientOSsecondary/llama.cpp/examples/server/public/: app.js  index.html  index.js
api/: actuator.py  federation_api.py  federation_stream_api.py
apps/: __init__.py
artifacts/: codex_scaffold_preset_verifier_matrix.json  codex_task_scaffold_preset_catalog.json  codex_task_scaffold_preset_catalog.prompt.txt  codex_task_scaffold_preset_verifier_prompt.txt  codex_task_scaffold_preset_verifier_scaffold.json  work_item_review_packet_matrix.json
audit_log/: README.md
bench/: locustfile.py
cli/: __init__.py  sentientos_cli.py
codex/: __init__.py  amendments.py  anomalies.py  autogenesis.py  config.py  coverage.py  embodiment.py  expression_bridge.py  gap_seeker.py  governance.py  implementations.py  integrity_daemon.py  intent.py  intent_drafts.py  meta_strategies.py  narratives.py  orchestrator.py  plans.py  proof_budget_governor.py  proof_verifier.py  proposal_router.py  recover-integrity-after-ritual.codex  recover-integrity-after-routine.codex  refinements.py  rewrites.py  sandbox.py  scaffolds.py  specs.py  strategy.py  testcycles.py
config/: act_templates.yml  act_whitelist.yml  canonical_glossary.json  federation.yaml  feedback_rules.json  hardware_profile.json  master_files.json  model_mirrors.json  model_preference.txt  multimodal_reflex_examples.json  narrative_ttl.json  policies.yml  reflex_config.json  reflex_rules.json  trust_policy.yml  wdm.yaml
control_plane/: __init__.py  enums.py  policy.py  records.py  task_admission.py
council/: __init__.py  bus.py  referee.py  runner.py  schema.py
council_adapters/: __init__.py  base_voice.py  deepseek_voice.py  local_voice.py  openai_voice.py
daemon/: __init__.py  codex_daemon.py  cpu_ram_daemon.py  disk_daemon.py  fan_daemon.py  log_federation_daemon.py  network_daemon.py  thermal_daemon.py
dashboard_ui/: __init__.py  api.py  event_stream.py
demos/: README.md  audit_demo.ipynb  demo_chain_branch.json  demo_simple_success.json
docs/: ARCHITECTURE.md  ARCHITECTURE_4_5.md  ARTIFACT_PROVENANCE_INDEX.md  ATTESTATION.md  AUDIT_DRIFT.md  AUDIT_HEALTH_DASHBOARD.md  AUDIT_LEDGER.md  AUDIT_LOG.md  AUDIT_MIGRATION_ROADMAP.md  AUDIT_PROCESS.md  AUDIT_RECOVERY_AND_STRICT_READINESS.md  AVATAR_RUNTIME.md  BASELINE_VERIFICATION_STATUS.md  BLESSED_MEMORY_API.md  BRANCH_PROTECTION.md  BUILD_SECONDARY.md  CATHEDRAL_HEALING_SPRINT.md  CATHEDRAL_MEMORY_MANIFESTO.md  CATHEDRAL_WOUNDS_DASHBOARD.md  CHANGELOG.md  CHAOS.md  CODEX_CUSTOM_CONNECTOR.md  CODEX_PRIVILEGE_ENFORCEMENT.md  CODEX_TTS_COMPATIBILITY.md  CODEX_TYPE_CHECK_REMEDIATION.md  CODEX_UPDATE_PIPELINE.md  CONNECTOR_TROUBLESHOOTING.md  CONSCIOUSNESS_LAYER.md  CONSCIOUSNESS_SCAFFOLD_PR_NOTES.md  CONTRADICTION_TIGHTENING_AND_PROFILES.md  CONTROL_PLANE_KERNEL_ADOPTION.md  CONVERGENCE_ORACLES.md  CROSS_HOST_REPLAY_PROVENANCE.md  CROSS_HOST_TRIAGE_AND_ARTIFACTS.md  CURATED_MODEL_MATRIX.md  DAEMON_ENDURANCE_AND_CHAOS.md  DASHBOARD.md  DEFAULT_TRUTH_COMPLETENESS.md  DEPLOYMENT_CLOUD.md  DOCKER_TROUBLESHOOT.md  (+159 more)
dotenv/: __init__.py
embodiment/: __init__.py  silhouette.py  silhouette_store.py
environment/: setup_requirements.sh
formal/: README.md
glow/: introspection.jsonl  self.json
godot_avatar_demo/: README.md  project.godot
gp_plugins/: wave_hand.py
gui/: cathedral_gui.py  wdm_panel.py
helm/: .env  Chart.yaml  values.yaml
hf_intake/: README.md  classifier.py  cli.py  discovery.py  escrow.py  manifest.py
installer/: dry_run.py  setup_installer.py
lint/: vocabulary_violation_report.txt
logs/: README.md  federation_log.jsonl  migration_ledger.jsonl  presence.jsonl  presence_stream.jsonl  privileged_audit.jsonl  privileged_audit.jsonl.bad  privileged_audit_quarantined.jsonl  support_log.jsonl  wdm_summaries.jsonl
manifests/: manifest-2025-03-22.json  manifest-v1.json
nacl/: __init__.py  signing.py
plugins/: escalate.py  hello.py  hello_plugin.py  pycall.py  self_heal_plugin.py
policies/: __init__.py  sentientos.py
privilege_lint/: __init__.py  _compat.py  _env.py  cache.py  color.py  comment_controls.py  config.py  config.toml  data_rules.py  docstring_rules.py  env.py  go_rules.py  import_rules.py  js_rules.py  license_rules.py  metrics.py  runner.py  security_rules.py  shebang_rules.py  template_rules.py  typehint_rules.py  typing_rules.py
pulse/: context.json  focus.json  system.json
reporters/: __init__.py  sarif.py
resources/: canonical_vow.txt
scripts/: __init__.py  __main__.py  add_codex_request.py  admit_workspace_change_set.py  alerts_snapshot.sh  analyze_test_failures.py  analyze_test_provenance.py  anchor_receipt_chain.py  apply_audit_repairs.py  audit_blesser.py  audit_chain_cleanser.py  audit_chain_doctor.py  audit_chain_reanchor.py  audit_immutability_verifier  (+334 more)
(+3684 files in other folders)
