[package]
name = "sentientos"
version = "1.1.0-alpha"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde_json = "1.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "rebind"
path = "rebind.rs"
