[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "sentientos"
version = "4.5.0"
description = "Ledger-based automation framework enforcing sanctuary privilege."
authors = ["SentientOS"]
readme = "README.md"
packages = [
    {include = "sentientos"},
    {include = "api"},
    {include = "gui"},
]

[project]
name = "sentientos"
version = "4.5.0"
description = "Ledger-based automation framework enforcing sanctuary privilege."
readme = "README.md"
authors = [{name = "SentientOS"}]
license = {text = "MIT"}
requires-python = ">=3.8"

# Dependencies
dependencies = [
    "Flask>=2.2,<3",
    "python-dotenv>=0.21,<1",
    "requests>=2.31,<3",
    "pytest>=7,<8",
    "colorama>=0.4,<1",
    "PyYAML>=6,<7",
    "pyttsx3>=2,<3",
    "SpeechRecognition>=3,<4",
    "sounddevice>=0.4,<1",
    "pydub>=0.25,<1",
    "vosk>=0.3,<1",
# TEMP-COMMENTED:     "TTS>=0.14,<1",
    "librosa>=0.10,<1",
    "watchdog>=2,<3",
    "pandas>=1.5,<2",
    "streamlit>=1,<2",
    "Flask-SocketIO>=5,<6",
    "python-socketio>=5,<6",
    "mne>=1,<2",
    "brainflow>=5,<6",
    "pyserial>=3,<4",
    "mypy>=1.5,<2",
    "psutil>=5,<6",
    "transformers>=4,<5",
    "fastapi>=0.110,<1",
    "uvicorn>=0.23,<1",
]

[project.optional-dependencies]
bin = []
src = []
dev = [
    "mypy==1.*",
    "types-requests",
    "types-PyYAML",
    "pytest-cov",
    "sphinx==7.*",
    "sphinx-autodoc-typehints",
    "myst-parser",
    "sphinxawesome-theme",
    "sphinx-autobuild",
]
tts = ["edge-tts"]

[project.scripts]
support = "support_cli:main"
ritual = "ritual_cli:main"
treasury = "treasury_cli:main"
avatar-gallery = "avatar_gallery_cli:main"
avatar-presence = "avatar_presence_cli:main"
review = "review_cli:main"
diff-memory = "diff_memory_cli:main"
theme = "theme_cli:main"
suggestion = "suggestion_cli:main"
trust = "trust_cli:main"
video = "video_cli:main"
plint-env = "scripts.plint_env:main"
cathedral-gui = "gui.cathedral_gui:main"
sentient-api = "sentient_api:app.run"
sentientosd = "sentientosd:main"
sentientos-chat = "sentientos.chat_service:run"
sentientos-updater = "updater:update"

[project.entry-points."sentientos.plugins"]
telegram-bot = "telegram_bot"
webhook-status-monitor = "webhook_status_monitor"
bridge-watchdog = "bridge_watchdog"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentientos", "api", "gui"]

[tool.setuptools]
py-modules = ["sentient_api"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["tests"]
files = ["sentientos"]
follow_imports = "skip"

[tool.privilege_lint]
required = false

[tool.pytest.ini_options]
addopts = "--cov=sentientos --cov-fail-under=80"
